<resources>
    <string name="app_name">NMedia</string>
    <string name="hello">Hello World!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_post_like">Like</string>
    <string name="description_post_share">Share</string>
    <string name="description_post_save">Save</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post Text</string>
    <string name="menu_edit">Edit</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="chooser_share_post">Share post</string>
    <string name="add_post">Add post</string>
    <string name="retry_loading">Retry</string>
    <string name="empty_posts">There are no posts.\nIf you create a new post, it will appear here</string>
    <string name="error_loading">Error loading data</string>
    <string name="save">Save</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="new_posts">show new posts</string>
    <string name="menu_save">menu save\n</string>
    <string name="description_select_photo">select photo</string>
    <string name="description_take_photo">take photo</string>
    <string name="description_photo">description photo</string>
    <string name="remove">remove</string>
    <string name="clear">clear</string>
    <string name="sign_in">sign in</string>
    <string name="sign_up">sign up</string>
    <string name="sign_out">sign out</string>
    <string name="hint_author_name">author name</string>
    <string name="hint_password">password</string>
</resources>